version 0.7 -- July 3 2005
    added ninjahelper: a dialog based wizard for creating backupninja configs.
    considerably improved and changed the log file output.
        
version 0.6 -- June 16 2005
	ldap handler has new options: backup method to use (ldapsearch or
		slapcat), restart, passwordfile and binddn. Default backup method
		is set to ldapsearch as this is safer
	******************************************************************
	NOTE: to get the previous default behavior with the ldap handler, 
	you must set "method = slapcat". The new default is ldapsearch.
	******************************************************************
	implemented fix so that the main script will echo fatal errors rather
		than being silent about them, this means an error message every hour
		if there is a major configuration problem (not a handler problem)
	added vserver support to main script and to the handlers: mysql, svn, sys, rdiff
	changes to duplicity handler (thanks intrigeri!):
		"keep = yes" now disables file cleaning on desthost
		added "sign" option for backups signing
		added "encryptkey" option to specify the gpg key to use
		split config into [source], [gpg] and [dest] sections
		added "nicelevel" option
		added "testconnect" option
		added "sshoptions" option (will be passed to ssh/scp)
		added "bandwidthlimit" option
	example.dup example config file for duplicity handler 
	added trac (http://trac.edgewall.com/) environment handler (thanks Charles Lepple!)
	added configfile option to mysql handler
		the default is /etc/mysql/debian.cnf. with this, 
		sqldump doesn't need dbusername. (hotcopy still does).
    fixed bug in mysql handler which caused some passwords to not work.
        (.my.cnf files now have double quotes around password)
    can now pass options to hwinfo and sfdisk in sys handler.

version 0.5 -- April 12 2005
	rdiff handler works when remote sshd has a banner
	rdiff handler supports local dest 
	logfile is created if it doesn't exist